code to download the file from kaggle api and successfully ran the dag in airflow

--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,4 @@ __pycache__
 dags/airflow_tutorial_preeti01.py
 dags/airflow_tutorial_preeti02.py
 dags/hello_world.py
-dags/dag-01.py
+dags/atp_dag-01.py
