--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /opt/*
 *cfg
 *.db
-/DataEngineering.Labs.AirflowProject/
+/DataEngineering.Labs.AirflowProject/*
 *.pid
 .idea/
 .DS_Store
@@ -11,3 +11,10 @@ __pycache__
 dags/airflow_tutorial_preeti01.py
 dags/airflow_tutorial_preeti02.py
 dags/hello_world.py
+dags/atp_dag-04.py
+test_files/
+*.pem
+*.amazonaws.com
+.ipynb_checkpoints/
+
+
